[gd_scene load_steps=11 format=2]

[ext_resource path="res://Experiments/MenuShift.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Menu/LevelSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Menu/TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/SplashScreen3.png" type="Texture" id=4]

[sub_resource type="InputEventAction" id=1]
action = "ui_left"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "ScrollDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TitleScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.535887, 0.329877 ),
"update": 0,
"values": [ Vector2( 0, -312 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.287175, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 312 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ScrollLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TitleScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.554785, 0.420448 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -524, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelSelect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.420448, 0.554785 ),
"update": 0,
"values": [ Vector2( 524, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backdrop:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.43, 0.43, 0.43, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ScrollRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LevelSelect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.466516, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 524, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.554785, 1 ),
"update": 0,
"values": [ Vector2( -524, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backdrop:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.43, 0.43, 0.43, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TitleScreen:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.517632, 0.450625 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -312 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Credits:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.535887, 0.482968 ),
"update": 0,
"values": [ Vector2( 0, 312 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Backdrop:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.35, 0.35, 0.35, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" parent="TitleScreen" instance=ExtResource( 3 )]

[node name="ScrollUpBtn" type="Button" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -54.9406
margin_top = -54.8107
margin_right = 61.0594
margin_bottom = -34.8107
shortcut = SubResource( 2 )
text = "Test This Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 312.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ScrollDown = SubResource( 3 )
anims/ScrollLeft = SubResource( 4 )
anims/ScrollRight = SubResource( 5 )
anims/ScrollUp = SubResource( 6 )

[node name="LevelSelect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 524.0
margin_right = 524.0

[node name="LevelSelect" parent="LevelSelect" instance=ExtResource( 2 )]

[node name="ScrollDownBtn" type="Button" parent="LevelSelect"]
margin_top = 5.29732
margin_right = 157.0
margin_bottom = 25.2973
text = "Test This Other Button"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TitleScreen/ScrollUpBtn" to="." method="_on_ScrollUpBtn_pressed"]
[connection signal="pressed" from="LevelSelect/ScrollDownBtn" to="." method="_on_ScrollDownBtn_pressed"]
